--- a/app_teachers/templates/manage/content/form.html
+++ b/app_teachers/templates/manage/content/form.html
@@ -73,6 +73,8 @@ Add a new content
 
         if($("#id_content").length > 0) {
            // $("#id_content").closest(".col-md-4").eq(0).removeClass('col-md-4').addClass('col-md-9')
+
+          // $("#id_content").summernote();
         }
 
     });
