--- a/students/templates/student_base.html
+++ b/students/templates/student_base.html
@@ -22,7 +22,7 @@
 
 <body class="bg-light">
 
-  <nav class="navbar navbar-expand-md navbar-bark bg-dark">
+  <nav id="top-nav" class="navbar navbar-expand-md navbar-bark bg-dark">
     <a class="navbar-brand mb-0 h1 text-white" href="{%url 'student_course_list'%}">EDUCA</a>
     <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarCollapse"
       aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -73,6 +73,8 @@
 
     </div>
   </nav>
+  {% block nav %}
+  {% endblock %}
 
   <main class="container-fluid" role="main">
     <div id="content">
