--- a/students/templates/students/course/detail.html
+++ b/students/templates/students/course/detail.html
@@ -4,12 +4,62 @@
 {{ object.title }}
 {% endblock %}
 
+{% block nav %}
+<nav class="navbar navbar-expand-md navbar-bark bg-dark">
+    <a class="navbar-brand mb-0 h1 text-white" href="#"> {{ object.title }}</a>
+    <div class="navbar-collapse">
+        <ul class="navbar-nav ml-auto">
+
+            <li class="nav-item top-audio-1 d-none">
+
+            </li>
+
+            {% if module != None %}
+
+            {% if next_content != None and active_content.complete == True %}
+
+            {% if next_content.type == 'quiz' %}
+
+            <li class="nav-item">
+                <a href="{% url 'student_course_detail_module' object.id next_content.module.id %}?content={{next_content.object.id}}&type=quiz"
+                    class="nav-link text-white btn btn-sm btn-success">Next Chapter (Quiz) >> </a>
+            </li>
+            {% elif next_content.type == 'content' %}
+
+            <li class="nav-item">
+                <a href="{% url 'student_course_detail_module' object.id next_content.module.id %}?content={{next_content.object.id}}"
+                    class="nav-link text-white btn btn-sm btn-success">Next Chapter >> </a>
+            </li>
+
+            {% endif %}
+
+            {% endif %}
+            {% endif %}
+
+            <li class="nav-item dropdown ml-3">
+                <a class="nav-link dropdown-toggle text-white" data-toggle="dropdown" href="#">
+                    <i class="fa fa-lg fa-cog text-white"></i> {{request.user}}
+                </a>
+                <div class="dropdown-menu dropdown-menu-right">
+                    <a class="dropdown-item" href="{%url 'student_course_list'%}">Dashboard</a>
+                    {% if request.user.is_authenticated %}
+                    <a class="dropdown-item" href="{% url "logout" %}">Sign out</a>
+                    {%endif%}
+                </div>
+            </li>
+        </ul>
+
+    </div>
+</nav>
+{% endblock %}
+
 {% block content %}
 
+
 <div class="container-fluid">
-    <h1 class="header">
+    <!-- <h1 class="header">
         {{ object.title }}
-    </h1>
+    </h1> -->
 
     <div class="row">
         <div class="col-md-3">
@@ -109,20 +159,14 @@
 
                         {% if next_content.type == 'quiz' %}
 
-                        <!-- and next_content.object.id not in taken_quizzes -->
-
-                        <div class="col-md-12 mb-5">
+                        <div class="col-md-12 mb-5 d-none">
                             <a href="{% url 'student_course_detail_module' object.id next_content.module.id %}?content={{next_content.object.id}}&type=quiz"
                                 class="btn btn-primary">Next Chapter (Quiz) >> </a>
                         </div>
 
-                        <!-- <div class="col-md-12 mb-5">
-                            <a href="{% url 'take_quiz' next_content.object.id %}" class="btn btn-primary">Take Quiz >> </a>
-                        </div> -->
-
                         {% elif next_content.type == 'content' %}
 
-                        <div class="col-md-12 mb-5">
+                        <div class="col-md-12 mb-5 d-none">
                             <a href="{% url 'student_course_detail_module' object.id next_content.module.id %}?content={{next_content.object.id}}"
                                 class="btn btn-primary">Next Chapter >> </a>
                         </div>
@@ -136,12 +180,12 @@
 
                         {% if active_content.object.id  == content.id and active_content.type == 'content' %}
 
-                        <div class="col-md-12 mb-30">
+                        <div class="col-md-12 mt-2 mb-30">
                             <div class="about-course">
                                 {% with item=content.item %}
 
                                 <h4>{{ item.title }}</h4>
-                                
+
                                 <div>
                                     {{ item.render }}
                                 </div>
@@ -217,6 +261,11 @@
 
 <script>
 
+    $("#top-nav").hide();
+
+    $('iframe').on("load", function () {
+        addAudioTop();
+    });
 
     $(document).ready(function () {
 
@@ -339,30 +388,33 @@
     };
 
     function embedFile() {
+
         if ($(".file-item").length > 0) {
+
             var href = $(".file-item").eq(0).attr('href');
 
             if (href) {
+
                 if (href.toLowerCase().indexOf(".png") >= 0) {
 
                     var img = $("<img />", { src: href });
 
                     $(".file-item").eq(0).replaceWith(img);
-                } else   if (href.toLowerCase().indexOf(".pdf") >= 0) {
-                    
+                } else if (href.toLowerCase().indexOf(".pdf") >= 0) {
+
                     var pdfDiv = $("<div />", { id: 'pdfViewer' });
 
                     pdfDiv.css({
-                        width:'100%',
-                        'min-height':600
+                        width: '100%',
+                        'min-height': 600
                     });
 
                     $(".file-item").eq(0).replaceWith(pdfDiv);
 
                     var options = {
-    height: "500px",
-    pdfOpenParams: { view: 'FitV', page: '1' }
-};
+                        height: "500px",
+                        pdfOpenParams: { view: 'FitV', page: '1' }
+                    };
 
                     PDFObject.embed(href, "#pdfViewer", options);
                 }
@@ -370,5 +422,32 @@
         }
 
     };
+
+
+    function addAudioTop() {
+
+        if ($(".about-course iframe").length > 0) {
+            if ($(".about-course iframe").eq(0).contents().find('audio:eq(0) source').length > 0) {
+                var src = $(".about-course iframe").eq(0).contents().find('audio:eq(0) source')[0].src;
+
+                if (src) {
+
+                    var ad = '<audio id="audio-player" controls="controls" src="' + src + '" type="audio/mpeg">';
+
+                    $(".top-audio-1").html(ad);
+                    $(".top-audio-1").removeClass('d-none');
+                    $(".about-course iframe").eq(0).contents().find('audio:eq(0)').hide();
+
+                    $(".top-audio-1 audio").css({
+                        'height': 33,
+                        'margin-right': 20,
+                        'margin-top': 5
+                    })
+                }
+
+            }
+        }
+
+    }
 </script>
 {% endblock %}
