--- a/students/templates/students/course/detail.html
+++ b/students/templates/students/course/detail.html
@@ -468,6 +468,7 @@
 
                     var options = {
                         height: "500px",
+                        width:'100%',
                         pdfOpenParams: { view: 'FitV', page: '1' }
                     };
 
