--- a/courses/templates/courses/course/list.html
+++ b/courses/templates/courses/course/list.html
@@ -29,7 +29,7 @@ All courses
 
               </div>
 
-              <div class="list-group mt-2">
+              <div class="list-group mt-2 d-none">
                 <a href="{% url "courses_list" %}" class="list-group-item list-group-item-secondary">
                  All 
                 </a>
@@ -50,29 +50,7 @@ All courses
 
               </div>
 
-         
-            <!-- <nav id="sidebar" class="sidebar-wrapper">
-                <div class="sidebar-content">
-                    <div class="sidebar-brand">
-                        <a href="{% url "courses_list" %}">All </a>
-                    </div>
-                  
-                    <div class="sidebar-menu">
-                        <ul>
-
-                            {% for s in subjects %}
-                            <li>
-                                <a {% if subject == s %} class="active" {% endif %}
-                                    href="{% url "course_list_subject" s.slug %}">
-                                    <span>{{ s.title }}</span>
-                                    <span class="badge badge-pill badge-primary">{{ s.total_courses }}</span>
-                                </a>
-                            </li>
-                            {% endfor %}
-                        </ul>
-                    </div>
-                </div>
-            </nav>  -->
+        
         </div>
         <div class="col-md-9">
             <main class="page-content">
@@ -90,7 +68,7 @@ All courses
                                     <span><i class="fa fa-circle" aria-hidden="true"></i></span>
                                     <a href="{% url "course_list_subject" subject.slug %}">{{ subject }}</a>
                                 </div>
-                                <p> Instructor:
+                                <p class="d-none"> Instructor:
                                     {% if course.owner.get_full_name %}
                                     {{ course.owner.get_full_name }}
                                     {% else %}
