--- a/courses/templates/index.html
+++ b/courses/templates/index.html
@@ -50,7 +50,7 @@ Online - NYC CONSTRUCTION SAFETY TRAINING
                     <span><i class="fa fa-circle" aria-hidden="true"></i></span>
                     <a href="/course/subject/{{subject.slug}}">{{subject.title}}</a>
                 </div>
-                <p> Instructor: {{#ownerName}}{{owner}}{{/ownerName}}  {{owner.first_name}} {{owner.last_name}}</p>
+                <p class="d-none"> Instructor: {{#ownerName}}{{owner}}{{/ownerName}}  {{owner.first_name}} {{owner.last_name}}</p>
                 <p> {{total_modules}} Modules.</p>
             </div>
 
