--- a/students/templates/student_base.html
+++ b/students/templates/student_base.html
@@ -9,6 +9,8 @@
   <link href="{% static "/css/font-awesome.min.css" %}" rel="stylesheet">
   <link href="{% static "/css/teacher.css" %}" rel="stylesheet">
   <link href="{% static "/pickadate/jquery.datetimepicker.min.css" %}" rel="stylesheet">
+  <link href="{% static "/plugins/scroll/jquery.scrollbar.css" %}" rel="stylesheet">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
   </link>
 
@@ -116,6 +118,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
 
   <script src="//media.twiliocdn.com/sdk/js/video/releases/2.4.0/twilio-video.min.js"></script>
+
+  <script src="{% static "/plugins/scroll/jquery.scrollbar.min.js" %}"></script>
 
   {% block scripts %}
   {% endblock %}
