--- a/courses/templates/registration/login.html
+++ b/courses/templates/registration/login.html
@@ -1,26 +1,38 @@
 {% extends "app_base.html" %}
+{% load staticfiles %}
 
 {% block title %}Log-in{% endblock %}
 
 {% block content %}
 <h1>Log-in</h1>
-<div class="module">
-    {% if form.errors %}
-    <p>Your username and password didn't match. Please try again.</p>
-    {% else %}
-    <p>Please, use the following form to log-in:</p>
-    {% endif %}
-    <div class="login-form">
-        <form action="{% url 'login' %}" method="post">
-            {{ form.as_p }}
-            {% csrf_token %}
-            <input type="hidden" name="next" value="{{ next }}" />
-            <p><input type="submit" value="Log-in"></p>
-        </form>
-    </div>
-</div>
-{% endblock %}
 
+<section class="">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+
+                <div class="module">
+                    {% if form.errors %}
+                    <p>Your username and password didn't match. Please try again.</p>
+                    {% else %}
+                    <p>Please, use the following form to log-in:</p>
+                    {% endif %}
+                    <div class="login-form">
+                        <form action="{% url 'login' %}" method="post">
+                            {{ form.as_p }}
+                            {% csrf_token %}
+                            <input type="hidden" name="next" value="{{ next }}" />
+                            <p><input type="submit" value="Log-in"></p>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</section>
+
+{% endblock %}
 
 {% block scripts %}
 <script>
